--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   margin-left: 60px;
   margin-bottom: 18px;
 
-  border: 1px solid transparent;
   border-radius: 50%;
 }
 
@@ -37,6 +36,11 @@ body {
   line-height: 36px;
   text-align: center;
 }
+
+.header__credentials br {
+  display: none;
+}
+
 .contacts__header {
   padding-left: 18px;
 }
@@ -108,6 +112,16 @@ body {
   margin-bottom: 36px;
   font-weight: bold;
 }
+.block__ul-item br {
+  display: none;
+}
+
+.block__ul-item p {
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+
 .block__ul-item::before {
   content: "";
   position: absolute;
@@ -120,6 +134,7 @@ body {
 }
 
 .block__ul-item::after {
+  
   content: "";
   position: absolute;
   width: 30px;
@@ -129,6 +144,9 @@ body {
   top: 30px;
   background-color: limegreen;
 }
+
+/* Надо было вставлять отдельный div для бара в HTML, 
+но я сделал так и получил такой некрасивый код, урок усвоен :) */
 
 .block__ul-item:first-child::after {
   width: 90px;
@@ -154,6 +172,7 @@ body {
   margin-right: 16px;
   color: limegreen;
 }
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -163,4 +182,291 @@ body {
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+#arrow {
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+  width: 24px;
+  height: 24px;
+  background-color: limegreen;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition-duration: 200ms;
+}
+
+#arrow::before {
+  position: absolute;
+  content: "";
+  left: 10px;
+  bottom: 4px;
+  width: 4px;
+  height: 10px;
+  background-color: black;
+  border-radius: 20%;
+}
+
+#arrow::after {
+  position: absolute;
+  content: "";
+  left: 4px;
+  top: -5px;
+  border: 8px solid transparent;
+  border-bottom-color: black;
+}
+
+#arrow:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+#arrow:active {
+  background-color: lime;
+}
+
+@media(min-width:768px) {
+  .header, main {
+  width: 720px;
+}
+
+.header {
+  padding-top: 18px;
+  margin-bottom: 48px;
+  align-items: center;
+}
+
+.header__photo {
+  width: 300px;
+  height: 300px;
+  margin-left: 48px;
+  margin-bottom: 36px;
+}
+
+.header__credentials {
+  margin-right: 48px;
+  margin-top: -240px;
+  margin-bottom: 160px;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: right;
+}
+
+.header__credentials br {
+  display: block;
+}
+
+.contacts__list {
+  padding-left: 22px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.contacts__item {
+  margin: 0;
+  padding: 0;
+  flex-basis: 250px;
+  flex-shrink: 0;
+  margin-bottom: 24px;
+}
+
+
+.block {
+  margin: 0;
+  display: flex;
+}
+
+.block__description {
+  margin: 0;
+  padding: 30px;
+}
+
+.block__header {
+  position: relative;
+  margin: 0;
+  font-size: 24px;
+  padding: 30px;
+  flex-basis: 200px;
+}
+
+.block__header > span {
+  display: none;
+}
+
+.block__unordered-list {
+  flex-basis: 450px;
+  flex-shrink: 0;
+  padding: 30px;
+  padding-left: 0;
+}
+
+.block__item {
+  padding: 30px;
+  padding-bottom: 0;
+}
+
+
+.block__item-header {
+  margin-top: 5px;
+}
+}
+
+@media(min-width:768px) and (max-width: 1199px) {
+  .block__ul-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: right;
+
+}
+.block__ul-item br {
+  display: block;
+}
+
+.block__ul-item span {
+  order: 2;
+}
+
+.block__ul-item p {
+  margin: 0;
+  padding: 0;
+  padding-right: 15px;
+  width: 100px;
+  box-sizing: border-box;
+}
+.block__ul-item::before,
+.block__ul-item::after {
+  left: 110px;
+  top: 10px;
+  height: 5px;
+}
+
+.block__ul-item:nth-child(2)::after,
+.block__ul-item:nth-child(2)::before {
+  top: 20px;
+}
+}
+@media(min-width:1200px) {
+  html {
+    background-color: rgb(250, 247, 245);
+  }
+  .header, main {
+  width: 1120px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: white;
+}
+
+.header {
+  padding-top: 25px;
+  margin-bottom: 0px;
+  align-items: center;
+}
+
+.desktop-container {
+  margin-left: 55px;
+}
+.header__photo {
+  width: 300px;
+  height: 300px;
+  margin-left: 48px;
+  margin-bottom: 36px;
+  background-color: rgb(250, 247, 245);
+}
+
+.header__credentials {
+  margin-left: 60px;
+  margin-top: -0px;
+  margin-bottom: 60px;
+  padding-bottom: 40px;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: left;
+
+  border-bottom: 4px solid limegreen;
+}
+
+.header__credentials br {
+  display: none;
+}
+
+.contacts__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.block__description {
+  margin: 0;
+  padding: 30px;
+  /* background-color:#f5f3f3; */
+}
+
+.block__header {
+  position: relative;
+  margin: 0;
+  font-size: 24px;
+  padding: 30px;
+  flex-basis: 375px;
+  flex-shrink: 0;
+  box-sizing: border-box;
+  text-align: right;
+}
+
+.block__header > span {
+  display: none;
+}
+
+.block__unordered-list {
+  flex-basis: 685px;
+  flex-shrink: 0;
+  margin-left: 0px;
+  padding: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  /* background-color: #f5f3f3; */
+}
+
+.block__ul-item {
+  flex-basis: 320px;
+  margin-right: 40px;
+  margin-bottom: 60px;
+}
+
+.block__ul-item:nth-child(even) {
+  margin-right: 0px;
+}
+.block__ul-item::before,
+.block__ul-item::after {
+  height: 5px;
+}
+
+.block__ordered-list {
+  display: flex;
+  flex-wrap: wrap;
+  /* background-color: #f5f3f3; */
+}
+
+.block__item {
+  padding: 30px;
+  padding-bottom: 0;
+  width: 300px;
+}
+
+.block__item-header {
+  position: relative;
+  margin-top: 5px;
+}
+
+.block__item-header::before {
+  content: attr(data-number);
+  position: absolute;
+  right: 5px;
+  color: limegreen;
+}
+
+#arrow {
+  display: none;
+}
 }
