--- a/kitty-drum-kit/styles.css
+++ b/kitty-drum-kit/styles.css
@@ -40,17 +40,22 @@ body {
 
 .key {
   position: relative;
+  cursor: pointer;
   display: flex;
   font-family: 'Antic Slab', serif;
   border: 2px solid black;
   border-radius: 16px;
   text-transform: uppercase;
   font-size: 36px;
-  width: 66px;
-  height: 66px;
+  width: 64px;
+  height: 64px;
   justify-content: center;
   align-items: center;
-  transition: all 0.08s;
+  transition: all 100ms;
+}
+
+.key:hover {
+  background-color: rgba(126, 60, 231, 0.2);
 }
 
 .key--playing {
